--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "react-bootstrap": "^2.10.10"
   }
 }
