--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "@nestjs/mapped-types": "^2.1.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
