--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "react-bootstrap": "^2.10.10"
+    "pg": "^8.16.3",
+    "react-bootstrap": "^2.10.10",
+    "typeorm": "^0.3.25"
   }
 }
