--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/react-redux": "^7.1.34",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
@@ -18,6 +19,7 @@
     "class-validator": "^0.14.2",
     "pg": "^8.16.3",
     "react-bootstrap": "^2.10.10",
+    "react-redux": "^9.2.0",
     "typeorm": "^0.3.25"
   }
 }
